# signal-scope

./: .gitignore  .replit  LICENSE  README.md  demo.csv  pyproject.toml  replit.md  run_demo.py
attached_assets/: Pasted-Perfect-I-m-going-to-generate-the-entire-project-EXACTL_1767932791034.txt
signal_scope/: __init__.py  core.py  metrics.py  visualize.py
tests/: __init__.py  test_core.py  test_metrics.py
